Added Contact Us Section

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -13,6 +13,9 @@ body {
 -------------------------------------------------- */
 
 /* Carousel base class */
+::placeholder {
+  color: white;
+}
 .carousel {
   margin-bottom: 4rem;
 }
@@ -24,7 +27,9 @@ body {
 .navbar-custom {
   background-color: #099C7F;
 }
-
+.contact-us {
+  color: white
+}
 #top-left{
   margin-left: 150px;
 }
