Changed colour scheme and added logo and collapse function

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -25,7 +25,7 @@ body {
   z-index: 10;
 }
 .navbar-custom {
-  background-color: #099C7F;
+  background-color: #10222e;
 }
 .contact-us {
   color: white
@@ -36,8 +36,8 @@ body {
 
 .btn-primary {
   color: white;
-  background-color: #099C7F;
-  border-color: #099C7F
+  background-color: #10222e;
+  border-color: #10222e
 }
 
 #navbarCollapse{
@@ -96,7 +96,14 @@ body {
   letter-spacing: -.05rem;
 }
 
+.displayed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto }
 
+.center{
+  text-align: center;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
